# RustTest

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  main.yml  rust.yml
hello_world/: Cargo.toml
hello_world/src/: main.rs
my_app/: Cargo.toml
my_app/src/: interface.glade  main.rs
ressources/: interface.glade  style.css
solutions/: structures.rs  tuples.rs
src/: main.rs
src/grid/: file.rs  list.rs  mod.rs  status.rs
