[package]
name = "my_app"
version = "0.1.0"
authors = ["anthony-bt <aa.barillot@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.11"
url = "2.1.1"
futures-preview = { version = "0.3.0-alpha.15", optional = true}
atk = "^0"
glib-sys = "^0"
gobject-sys = "^0"
glib = "^0"
gio = "^0"
gdk = "^0"
gdk-pixbuf = "^0"
pango = "^0"
cairo-rs = { version = "^0", features = ["png"] }

[dependencies.gtk]
version = "0.8.1"
features = ["v3_20"]

[dev-dependencies]
cargo-watch = "^7.3.0"
